--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# Formatting tools for GitHub bot and CI workflows
+black>=24.0.0
+isort>=5.13.0
 PyGithub>=2.0.0
-requests>=2.31.0
-pyyaml>=6.0
+PyYAML>=6.0.0
